# RayTracer

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  example.json  final.json  rayTracer  raytracer  test_scene.json
documentation/: Main_8cpp.html  Main_8cpp__incl.dot  Raytracer_8h.html  Raytracer_8h__dep__incl.md5  Raytracer_8h__incl.dot  Raytracer_8h_source.html  Reader_8h__dep__incl.dot  Reader_8h__dep__incl.md5  Reader_8h__incl.dot  Reader_8h__incl.md5  Scene_8h__dep__incl.dot  Scene_8h__dep__incl.md5  Scene_8h__incl.dot  Scene_8h__incl.md5  Scene_8h_source.html  Shape_8h.html  Shape_8h__dep__incl.dot  Shape_8h__dep__incl.md5  Vector_8h.html  annotated.html  classCylinder-members.html  classCylinder.html  classCylinder__coll__graph.dot  classCylinder__inherit__graph.dot  classCylinder__inherit__graph.md5  classRay__coll__graph.dot  classReader__coll__graph.dot  classReader__coll__graph.md5  classRectangle__coll__graph.md5  classRectangle__inherit__graph.md5  classScene.html  classShape__coll__graph.dot  classShape__coll__graph.md5  classShape__inherit__graph.md5  classSimpleRayTracer.html  classSphere.html  classSphere__coll__graph.dot  classSphere__coll__graph.md5  classSphere__inherit__graph.md5  classTriangle.html  (+16 more)
documentation/html/: Main_8cpp__incl.md5  Raytracer_8h.html  Raytracer_8h__dep__incl.dot  Raytracer_8h__dep__incl.md5  (+86 more)
projet_SI/: CMakeLists.txt  Color.h  Main.cpp  Raytracer.h  Reader.h  Scene.h  Shape.h  Vector.cpp  Vector.h  Vectorr.h  oldtestPJ.cpp  reader.h  test.cpp
shapes/: CMakeLists.txt  Vector.cpp  Vector.h  test.cpp
(+134 files in other folders)
